# ntpi-screen

./: AUDIT.md  README.md  logging.yaml  ntpi-screen.service  pyproject.toml
ntpi_screen/: __init__.py  cli.py  display.py  gps.py  nut.py
